GNOME Bugzilla – Bug 626564
gdm displays no users at startup
Last modified: 2010-08-11 17:40:56 UTC
this report has been filed here: https://bugs.edge.launchpad.net/ubuntu/+source/gdm/+bug/614810 Pasting the relevant comments: "gdm displays no user to choose neither an input field where write the username by hand. Log: Window manager warning: Failed to read saved session file /var/lib/gdm/.config/metacity/sessions/10668c589f17d3cd5128120640536450000000014300008.ms: Failed to open file '/var/lib/gdm/.config/metacity/sessions/10668c589f17d3cd5128120640536450000000014300008.ms': No such file or directory ** (process:1557): DEBUG: Greeter session pid=1557 display=:0.0 xauthority=/var/run/gdm/auth-for-gdm-qqS3cn/database (gnome-power-manager:1556): GLib-GObject-WARNING **: /build/buildd/glib2.0-2.25.12.is.2.25.12/gobject/gsignal.c:2275: signal `proxy-status' is invalid for instance `0x25c2570' The value for the SHELL variable was not found the /etc/shells file This incident has been reported. (gnome-power-manager:1556): GLib-GObject-CRITICAL **: g_object_unref: assertion `G_IS_OBJECT (object)' failed (gnome-power-manager:1556): GLib-GObject-CRITICAL **: g_object_unref: assertion `G_IS_OBJECT (object)' failed gdm-simple-greeter[1557]: Gtk-WARNING: /build/buildd/gtk+2.0-2.21.5/gtk/gtkwidget.c:5676: widget not within a GtkWindow Window manager warning: Buggy client sent a _NET_ACTIVE_WINDOW message with a timestamp of 0 for 0x1000047 (Login Wind) Window manager warning: meta_window_activate called by a pager with a 0 timestamp; the pager needs to be fixed. Window manager warning: Buggy client sent a _NET_ACTIVE_WINDOW message with a timestamp of 0 for 0x1000047 (Login Wind) Window manager warning: meta_window_activate called by a pager with a 0 timestamp; the pager needs to be fixed. (gnome-power-manager:1556): GLib-GObject-CRITICAL **: g_object_unref: assertion `G_IS_OBJECT (object)' failed (gnome-power-manager:1556): GLib-GObject-CRITICAL **: g_object_unref: assertion `G_IS_OBJECT (object)' failed (gnome-power-manager:1556): GLib-GObject-CRITICAL **: g_object_unref: assertion `G_IS_OBJECT (object)' failed (gnome-power-manager:1556): GLib-GObject-CRITICAL **: g_object_unref: assertion `G_IS_OBJECT (object)' failed (gnome-power-manager:1556): GLib-GObject-CRITICAL **: g_object_unref: assertion `G_IS_OBJECT (object)' failed" " " This is telling: The value for the SHELL variable was not found the /etc/shells file This incident has been reported. GDM hides users without a valid shell. Could you please attach this file? " "daniel@miyazaki:~$ cat /etc/shells # /etc/shells: valid login shells /bin/csh /bin/sh /usr/bin/es /usr/bin/ksh /bin/ksh /usr/bin/rc /usr/bin/tcsh /bin/tcsh /usr/bin/esh /bin/dash /bin/bash /bin/rbash /usr/bin/screen daniel@miyazaki:~$ export | grep SHELL declare -x SHELL="/bin/bash" daniel@miyazaki:~$ ls -l /bin/bash -rwxr-xr-x 1 root root 818232 2010-04-19 03:51 /bin/bash daniel@miyazaki:~$" " I found this in the logs after enabling debug messages: gdm-simple-slave[2092]: DEBUG(+): GdmSlave: Requesting timed login details gdm-simple-slave[2092]: DEBUG(+): GdmSlave: Got timed login details: 0 0 gdm-simple-slave[2092]: DEBUG(+): Invalid NULL username for auto/timed login After adding the following to /etc/gdm/custom.conf it works again (don't ask me why): [daemon] TimedLoginEnable=false AutomaticLoginEnable=false [debug] Enable=true "
Sorry, what I said about the timed/auto login is not true. It looks like it just worked once. It's broken again now: no users shown on login.
Created attachment 167605 [details] greeter log
Created attachment 167606 [details] slave log
do you have a /usr/lib/gdm-simple-greeter file?
When this problem happens is there a panel on the bottom of the screen?
Created attachment 167608 [details] greeter log
Created attachment 167609 [details] slave log
(In reply to comment #4) > do you have a /usr/lib/gdm-simple-greeter file? Sorry about that. My mistakes, new logs coming in.
Created attachment 167610 [details] greeter log
Created attachment 167611 [details] slave log
Created attachment 167616 [details] "broken" history file
Created attachment 167617 [details] nsswitch.conf
Created attachment 167618 [details] greeter log after wiping history file
Created attachment 167619 [details] slave log after wiping history file
Created attachment 167620 [details] output of "getent passwd"
Created attachment 167623 [details] Broken history file Getent passwd output: root:x:0:0:root:/root:/bin/bash daemon:x:1:1:daemon:/usr/sbin:/bin/sh bin:x:2:2:bin:/bin:/bin/sh sys:x:3:3:sys:/dev:/bin/sh sync:x:4:65534:sync:/bin:/bin/sync games:x:5:60:games:/usr/games:/bin/sh man:x:6:12:man:/var/cache/man:/bin/sh lp:x:7:7:lp:/var/spool/lpd:/bin/sh mail:x:8:8:mail:/var/mail:/bin/sh news:x:9:9:news:/var/spool/news:/bin/sh uucp:x:10:10:uucp:/var/spool/uucp:/bin/sh proxy:x:13:13:proxy:/bin:/bin/sh www-data:x:33:33:www-data:/var/www:/bin/sh backup:x:34:34:backup:/var/backups:/bin/sh list:x:38:38:Mailing List Manager:/var/list:/bin/sh irc:x:39:39:ircd:/var/run/ircd:/bin/sh gnats:x:41:41:Gnats Bug-Reporting System (admin):/var/lib/gnats:/bin/sh nobody:x:65534:65534:nobody:/nonexistent:/bin/sh libuuid:x:100:101::/var/lib/libuuid:/bin/sh syslog:x:101:102::/home/syslog:/bin/false messagebus:x:102:106::/var/run/dbus:/bin/false hplip:x:103:7:HPLIP system user,,,:/var/run/hplip:/bin/false avahi-autoipd:x:104:110:Avahi autoip daemon,,,:/var/lib/avahi-autoipd:/bin/false avahi:x:105:111:Avahi mDNS daemon,,,:/var/run/avahi-daemon:/bin/false couchdb:x:106:113:CouchDB Administrator,,,:/var/lib/couchdb:/bin/bash haldaemon:x:107:114:Hardware abstraction layer,,,:/var/run/hald:/bin/false speech-dispatcher:x:108:29:Speech Dispatcher,,,:/var/run/speech-dispatcher:/bin/sh kernoops:x:109:65534:Kernel Oops Tracking Daemon,,,:/:/bin/false saned:x:110:116::/home/saned:/bin/false pulse:x:111:117:PulseAudio daemon,,,:/var/run/pulse:/bin/false gdm:x:112:119:Gnome Display Manager:/var/lib/gdm:/bin/false nxvl:x:1000:1000:Nicolas Valcarcel,,,:/home/nxvl:/bin/bash usbmux:x:113:46:usbmux daemon,,,:/home/usbmux:/bin/false mpd:x:114:29::/var/lib/mpd:/bin/false tmp_user:x:1001:1001:Temporaly User,,,,:/tmp/tmp_user:/bin/bash
Created attachment 167635 [details] History files
okay this is fixed on the branch now, will do a new release shortly.