Fix intermittent failure to load user list

The greeter was failing to show the user list if ck-history took longer
than a second to load.

https://bugzilla.gnome.org/show_bug.cgi?id=626564