gui/simple-greeter/gdm-user-manager.c
@@ -1562,8 +1562,8 @@ ck_history_watch (GIOChannel     *source,
                 if (manager->priv->ck_history_watchdog_id != 0) {
                         g_source_remove (manager->priv->ck_history_watchdog_id);
                         manager->priv->ck_history_watchdog_id = 0;
-                        manager->priv->ck_history_pid = 0;
                 }
+                manager->priv->ck_history_pid = 0;
 
                 maybe_set_is_loaded (manager);
 
@@ -1604,6 +1604,7 @@ ck_history_watchdog (GdmUserManager *manager)
         if (manager->priv->ck_history_pid > 0) {
                 g_debug ("Killing ck-history process");
                 signal_pid (manager->priv->ck_history_pid, SIGTERM);
+                manager->priv->ck_history_pid = 0;
         }
 
         manager->priv->ck_history_watchdog_id = 0;
